fix(UI): contact information aligned correctly

--- a/css/index.scss
+++ b/css/index.scss
@@ -392,6 +392,7 @@ $colors: (
 .info {
     display: flex;
     gap: 1rem;
+    align-items: center;
 }
 
 .info > p > span {
